[tool.poetry]
name = "pnposch-github-io"
version = "0.1.0"
description = ""
authors = ["Peter N Posch <posch@firrm.de>"]
readme = "README.md"
packages = [{include = "pnposch"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
